--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mariadb": "^3.4.0",
+    "mariadb": "^3.4.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
